--- a/src/styles/customStyles.scss
+++ b/src/styles/customStyles.scss
@@ -9,8 +9,11 @@ body > * {
   @include typography.font-family;
 }
 
-main#main {
+main {
   width: 100%;
   height: calc(100vh - #{variables.$header-height});
   padding: paddings.$lg;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
