--- a/src/styles/customStyles.scss
+++ b/src/styles/customStyles.scss
@@ -1,9 +1,11 @@
-@use '@liene-putnina/react-components-for-you/dist/styles/scss/typography.scss';
-@use '@liene-putnina/react-components-for-you/dist/styles/scss/paddings.scss';
-@use '@liene-putnina/react-components-for-you/dist/styles/scss/variables.module.scss';
-@use '@liene-putnina/react-components-for-you/dist/styles/scss/colors.module.scss';
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/typography.scss";
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/paddings.scss";
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/mixins.scss";
 
-@import '@liene-putnina/react-components-for-you/dist/index.css';
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/variables.module.scss";
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/colors.module.scss";
+
+@import "@liene-putnina/react-components-for-you/dist/index.css";
 
 body > * {
   @include typography.font-family;
@@ -16,4 +18,5 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  @include mixins.focus-visible-outline();
 }
