--- a/src/styles/customStyles.scss
+++ b/src/styles/customStyles.scss
@@ -1,9 +1,9 @@
-@use '@liene-putnina/react-components-for-you/dist/styles/scss/typography.scss';
-@use '@liene-putnina/react-components-for-you/dist/styles/scss/paddings.scss';
-@use '@liene-putnina/react-components-for-you/dist/styles/scss/variables.module.scss';
-@use '@liene-putnina/react-components-for-you/dist/styles/scss/colors.module.scss';
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/typography.scss";
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/paddings.scss";
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/variables.module.scss";
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/colors.module.scss";
 
-@import '@liene-putnina/react-components-for-you/dist/index.css';
+@import "@liene-putnina/react-components-for-you/dist/index.css";
 
 body > * {
   @include typography.font-family;
@@ -13,4 +13,8 @@ main#main {
   width: 100%;
   height: calc(100vh - #{variables.$header-height});
   padding: paddings.$lg;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @include mixins.focus-visible-outline();
 }
