--- a/src/styles/customStyles.scss
+++ b/src/styles/customStyles.scss
@@ -2,6 +2,7 @@
 @use "@liene-putnina/react-components-for-you/dist/styles/scss/paddings.scss";
 @use "@liene-putnina/react-components-for-you/dist/styles/scss/variables.module.scss";
 @use "@liene-putnina/react-components-for-you/dist/styles/scss/colors.module.scss";
+@use "@liene-putnina/react-components-for-you/dist/styles/scss/mixins.scss";
 
 @import "@liene-putnina/react-components-for-you/dist/index.css";
 
