style: added custom color to a tags

--- a/src/styles/customStyles.scss
+++ b/src/styles/customStyles.scss
@@ -18,4 +18,10 @@ main#main {
   flex-direction: column;
   align-items: center;
   @include mixins.focus-visible-outline();
+  a {
+    color: colors.$accent;
+  }
+  a:hover {
+    color: colors.$accent--hover;
+  }
 }
